2004-10-18  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b7)

	* More fixes for crop UI.

2004-10-15  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b6)

	* Fixed crop area being cached between different pictures.
	* Final (hopefully) rework of the sort UI.
	* Fixed mixup in Gallery aliases when deleting a Gallery URL.
	* Fixed New Album sorting of existing albums.
	* Added comments in IM and jpegtran config files to
	  help users who have to customize them.

2004-09-22  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b5)

	* Changed wording (thanks JPMullan).

2004-09-08  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b4)

	* Redesigned the EXIF manipulation to make it more easily
	  extensible and faster.
	* Added the ability to sort pictures in an album by
	  EXIF creation date (based on a patch by Seth Ladd).

2004-09-07  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b3)

	* Removed File menu on mac: it's empty...

2004-09-03  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b2)

	* Fixed Drag and Drop issues for first-time users.

2004-09-02  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b1)

	* Added Russian translation (thanks Igor).

2004-08-26  Pierre-Luc Paour <gallery@paour.com> (1.4.1)

	* Released.

2004-08-24  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b13)

	* Again fixed cookie parsing bugs in stupid HTTPClient library.
	* Fixed proxy behavior when a a proxy is set in the Java Plugin
	  but no HTTP proxy is present.
	* Added support for G2 installations where 'remote' module is
	  not active.

2004-08-23  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b12)

	* Fixed basic auth dialog not working properly.

2004-08-20  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b11)

	* Fixed crashing bug for applets under Opera.

2004-08-19  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b10)

	* GR now honors the maximum size for images and uploads
	  that rather than the intermediate size, if set.

2004-08-17  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b9)
