@@ -1,3 +1,9 @@
+2005-01-06  Bharat Mediratta  <bharat@menalto.com> (1.4.2-b8)
+
+	* Added support for passing the browser's User-Agent string into the
+	  applet as a parameter so that the applet can pretend that it is the
+	  same browser when it communicates with the server.
+
 2004-10-18  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b7)
 
 	* More fixes for crop UI.
